test/runnable/iter-void-array.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	for _ : ((), ())::(void array)
		out print "array void"
	for i, _ : ((), ())::(void array)
		out print "array void {i}"
	for _ : ((), ())::void[]
		out print "list void"
	for i, _ : ((), ())::void[]
		out print "list void {i}"
	()
