test/compile-errors/local-ignored-but-mutable.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	_ mut = 0
	out print "foo"
	()
